# docgenie

./: .gitignore  LICENSE  README.md  docgenie.config.json  pyproject.toml
docgenie/: main.py  model.py  prompts.py
docgenie/cli/: __init__.py
docgenie/models/: __init__.py  custom_api.py  gemini.py
docgenie/utils/: file.py  languages.py  patterns.py  terminal.py
