[tool.poetry]
name = "docgenie"
version = "0.0.2"
description = "A tool for generating documentation"
authors = ["Ujjwal Jindal <jindalujjwal0720@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]

[tool.poetry.scripts]
docgenie = "docgenie.cli:cli"

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
python-dotenv = "^1.0.1"
inquirer = "^3.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/we-festify/docgenie"